<resources>
    <string name="app_name">Platter</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_diner">Diner</string>
    <string name="btn_admin">Admin</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_checkout">Check Out</string>
    <string name="title_payment">Payment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pagetitle">Welcome to Platter!</string>
    <string name="tablenumber">Table No.</string>
    <string name="btn_dinerSubmit">Proceed</string>
    <string name="dinerName">Name</string>
    <string name="dinerEmailAddress">Email Address</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>