<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/dinerEmailAddress"
        android:layout_width="562dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/dinerEmailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dinerName"
        app:layout_constraintVertical_bias="0.067" />



    <EditText
        android:id="@+id/dinerName"
        android:layout_width="557dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/dinerName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="239dp"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/btn_dinerProceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dinerEmailAddress"
        app:layout_constraintVertical_bias="0.231" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="523dp"
        android:layout_height="61dp"
        android:text="@string/pagetitle"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tableNumber"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:layout_marginTop="64dp"
        android:textSize="32sp"
        android:text="@string/tablenumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageTitle"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>